--- a/public/stylesheets/CmnStyle.css
+++ b/public/stylesheets/CmnStyle.css
@@ -5,8 +5,55 @@
  * Description : 
  ******************************************/
 
+html, body, div, span,
+h1, h2, h3, h4, h5, h6, p,
+a, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0
+}
+
+body{
+    font-family: "微软雅黑", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 #main {
     /*width: 800px;
     height: 600px;*/
-    margin:0 auto;
+    margin: 50px auto;
+}
+
+#fullpage{
+    z-index: 100;
+}
+
+.main-top {
+    display: block;
+    box-sizing: border-box;
+    position: fixed;
+    top:0;
+    left: 0;
+    height: 53px;
+    width: 100%;
+    min-width: 800px;
+    background: #222d32;
+    z-index: 900;
+}
+.sec-gud.section h1{
+    line-height:200px;
+    font-size: 90px;
+}
+
+.sec-gud.section h1,.sec-gud.section h2{
+    text-align: center;
 }
