--- a/public/stylesheets/CmnStyle.css
+++ b/public/stylesheets/CmnStyle.css
@@ -31,10 +31,8 @@ body {
     /*width: 800px;
     height: 600px;*/
     margin: 50px auto;
-}
-
-#fullpage {
-    z-index: 100;
+    border: 1px solid #888888;
+    box-shadow: 10px 10px 5px #888888;
 }
 
 .main-top {
