--- a/views/chart.ejs
+++ b/views/chart.ejs
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <link rel="stylesheet" href="../stylesheets/cmnstyle.css">
-    <link rel="stylesheet" href="../stylesheets/fullPage/jquery.fullPage.css">
+    <link rel="stylesheet" href="stylesheets/cmnstyle.css">
+    <link rel="stylesheet" href="stylesheets/fullPage/jquery.fullPage.css">
 
-    <script src="../javascripts/jQuery/jquery-2.2.3.min.js"></script>
-    <script src="../javascripts/fullPage/jquery.fullPage.min.js"></script>
-    <script src="../javascripts/echars/echarts.min.js"></script>
-    <script src="../javascripts/common/demo.js"></script>
+    <script src="javascripts/jQuery/jquery-2.2.3.min.js"></script>
+    <script src="javascripts/fullPage/jquery.fullPage.min.js"></script>
+    <script src="javascripts/echars/echarts.min.js"></script>
+    <script src="javascripts/common/demo.js"></script>
 
 </head>
 <body>
