--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+<head>
+    <title>dong ke soft</title>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+            border: 0;
+        }
+        body {
+            font-family: "微软雅黑", sans-serif;
+            background-color: #251d22;
+            color: #dedede;
+        }
+        a {
+            text-decoration: none;
+            color: #dedede;
+            margin: 0 auto;
+        }
 
-  </body>
+        a:hover {
+            color: #888888;
+        }
+
+        p.index{
+            font-size: 80px;
+            font-weight: 700;
+        }
+
+        p{
+            margin: 50px;
+        }
+    </style>
+</head>
+<body>
+<p class="index">Welcome</p>
+<p><a href="/rpt">Reporting System</a></p>
+
+</body>
 </html>
